--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -17,6 +17,16 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/munozgit85/react-portfolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/munozgit85/react-portfolio/issues"
+  },
+  "homepage": "https://github.com/munozgit85/react-portfolio#readme",
   "eslintConfig": {
     "extends": [
       "react-app",
